User files added, fixed login system bugs

--- a/Planner/src/planner/PlannerFrame.form
+++ b/Planner/src/planner/PlannerFrame.form
@@ -71,20 +71,20 @@
                       <Component id="newTitleField" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="newDescLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="newDescField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="newDescLabel" min="-2" max="-2" attributes="0"/>
+                      <Component id="newDescField" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="newDDLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="newDDField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="newDDField" min="-2" max="-2" attributes="0"/>
+                      <Component id="newDDLabel" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="newColorLabel" min="-2" pref="22" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="newColorChooser" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="32767" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="addButton" linkSize="3" alignment="1" min="-2" pref="44" max="-2" attributes="0"/>
                       <Component id="cancelButton" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -127,11 +127,17 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Create Event"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="cancelButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Cancel"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cancelButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
